# mpdnowplaying

./: CHANGELOG  CMakeLists.txt  README.md
plasmoid/: metadata.json
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: CompactRepresentation.qml  ConfigGeneral.qml  ControlButton.qml  FullRepresentation.qml  main.qml
plugin/: CMakeLists.txt  mpdnowplaying.cpp  mpdnowplaying.h  mpdnowplayingplugin.cpp  mpdnowplayingplugin.h  mpdstate.h  mpdworker.cpp  mpdworker.h  qmldir
po/: CMakeLists.txt  de.po  messages.sh  mpdnowplaying.pot  plasma_applet_org.kde.plasma.mpdnowplaying.pot
po/pt_BR/: plasma_applet_org.kde.plasma.mpdnowplaying.po
po/ru/: plasma_applet_org.kde.plasma.mpdnowplaying.po
